--- a/sources/URQEdit.dproj
+++ b/sources/URQEdit.dproj
@@ -104,6 +104,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
         <BT_BuildType>Debug</BT_BuildType>
+        <Debugger_RunParams>d:\dev\sourceforge-hod-svn\Sources\IFiction\hamster1.qst</Debugger_RunParams>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
