Добавил вставку ключевых слов в текст по шаблону.

--- a/keywords.ini
+++ b/keywords.ini
@@ -1,8 +1,64 @@
 [Operators]
-p=<text>
-pln=<text>
-btn=<loc>, <text>
-end=<>
-cls=<>
+p={p }<текст>
+pln=<текст>
+btn={btn ,1}<метка>, <текст>
+goto=<метка>
+proc=<метка>
+cls={cls}
+clsb={clsb}
+end={end}
+instr={instr =1}<переменная>=<текст>
+textalign={textalign=}<число 1,2 или 3>
+gametitle={gametitle=}<название игры>
+
+linespacing=<число>
+paraspacing=<число>
+textcolor=0x<цвет 0xAARRGGBB или 0xRRGGBB>
+style_dos_textcolor=<цвет URQ_DOS>
+textfont=<имя файла>
+textfont="_sysfont"
+decoradd=
+decormov=
+decorcol=
+decorrot=
+decorscl=
+decordel=
+decor_=
+textpane_left=<число>
+textpane_top=<число>
+textpane_width=<число>
+textpane_height=<число>
+idisp_=
+use_=<предмет>
+inv+=<предмет>
+inv-=<предмет>
+inv_=<предмет>
+invkill=
+perkill=
+&=
+and=<логическое И>
+or=<логическое ИЛИ>
+not=<логическое НЕТ>
+if=<условие оп. ветвления>
+then=<ветка 1>
+else=<ветка 2>
+last_btn_caption=
+save=
+input=
+anykey=<число>
+pause=<число>
+play=<loop или stop> <имя файла>, <громкость>
+voice=<имя файла>
+voice_volume=<число от 0 до 255>
+music=<имя файла>|stop[, <время в миллисекундах>]
+fademusic=<громкость>, <время в миллисекундах>
+count_=<метка>
+current_loc=
+previous_loc=
+rnd=
+##$={1}
+#%$={1}
+#/$={1}
+#$={1}
 
 
