--- a/keywords.ini
+++ b/keywords.ini
@@ -1,15 +1,15 @@
 [Operators]
 p={p }<текст>
-pln=<текст>
+pln={pln }<текст>
 btn={btn ,1}<метка>, <текст>
-goto=<метка>
-proc=<метка>
+goto={goto }<метка>
+proc={proc }<метка>
 cls={cls}
 clsb={clsb}
-end={end}
-instr={instr =1}<переменная>=<текст>
-textalign={textalign=}<число 1,2 или 3>
-gametitle={gametitle=}<название игры>
+end={|end||}
+instr={instr  = 3}<переменная>=<текст>
+textalign={textalign = }<число 1,2 или 3>
+gametitle={gametitle = }<название игры>
 
 linespacing=<число>
 paraspacing=<число>
