Код. utf-8. Багфикс.

--- a/keywords.ini
+++ b/keywords.ini
@@ -1,12 +1,13 @@
 [Operators]
 p={p }<текст>
 pln={pln }<текст>
-btn={btn ,1}<метка>, <текст>
+Кнопка (btn)={btn ,1}<метка>, <текст>
+Ссылка ([[]])={[[|]]3}
 goto={goto }<метка>
 proc={proc }<метка>
 cls={cls}
 clsb={clsb}
-end={|end||}
+end={@@end@@@@}
 instr={instr  = 3}<переменная>=<текст>
 textalign={textalign = }<число 1,2 или 3>
 gametitle={gametitle = }<название игры>
